# automator

./: .gitignore  Cargo.toml  README.md  StartServices.ps1
service_files/: automator.service  discord_active_channel.service
src/: action.rs  actions.rs  cpal_main.rs  interval.rs  lib.rs  main.rs  task.rs  trigger.rs  triggers.rs
src/action/: change_audio_device.rs  print.rs
src/actions/: change_audio_device.rs  print.rs
src/discord_monitor/: discord_active_channel.py  monitor.py
src/trigger/: discord_channel_change.rs  interval.rs  timer.rs
src/triggers/: discord_channel_change.rs  interval.rs  read_file_contents.rs  timer.rs
