[package]
name = "automator"
version = "0.1.0"
authors = ["Logan Saso <logansaso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "quicktest"
path ="src/main.rs"

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
