[package]
name = "automator"
version = "0.1.0"
authors = ["Logan Saso <logansaso@gmail.com>"]
edition = "2018"
default-run = "automator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "automator"
path ="src/main.rs"

[[target.'cfg(windows)'.bin]]
name = "audio"
path = "src/cpal_main.rs"

[target.'cfg(windows)'.dependencies]
cpal = "0.8.1"
dirs = "2.0.2"

[target.'cfg(unix)'.dependencies]
dirs = "2.0.2"
strsim = "0.10.0"
